# Nexus

./: .dockerignore  .gitignore  .zenodo.json  ARCHITECTURE.md  ARTIFACT.md  CITATION.cff  CONTRIBUTING.md  Cargo.toml  Dockerfile  NARRATIVE.md  README.md  REWORK.md  VISION.md  flake.nix  justfile  rust-toolchain.toml  x
crates/axle-core/: Cargo.toml
crates/axle-core/fuzz/: Cargo.toml
crates/axle-core/src/: capability.rs  cspace.rs  handle.rs  lib.rs  observer.rs  port.rs  revocation.rs  signals.rs  timer.rs  wait_core_loom.rs
crates/axle-mm/: Cargo.toml
crates/axle-mm/fuzz/: Cargo.toml
crates/axle-mm/src/: frame_table.rs  lib.rs  pte_meta.rs  types.rs  vma.rs  vmo.rs
crates/axle-sync/: Cargo.toml
crates/axle-sync/src/: lib.rs  spsc.rs
crates/cser-model/: Cargo.toml  README.md
crates/cser-model/src/: composition.rs  handoff_admission.rs  io.rs  lib.rs  model.rs  pager.rs  personality.rs  production_identity.rs  production_identity_postcommit.rs
crates/cser-model/tests/: composition_loom.rs  composition_properties.rs  composition_sequences.rs  handoff_admission_loom.rs  handoff_admission_properties.rs  handoff_admission_sequences.rs  io_loom.rs  io_properties.rs  io_sequences.rs  linux_io_composition_loom.rs  linux_io_composition_properties.rs  linux_io_composition_sequences.rs  pager_loom.rs  pager_properties.rs  pager_sequences.rs  personality_exec_properties.rs  personality_exec_sequences.rs  personality_futex_properties.rs  personality_futex_requeue_properties.rs  personality_futex_requeue_sequences.rs  personality_futex_sequences.rs  personality_properties.rs  personality_readiness_properties.rs  personality_readiness_sequences.rs  personality_registry_properties.rs  personality_registry_sequences.rs  personality_sequences.rs  production_identity_loom.rs  production_identity_postcommit_properties.rs  production_identity_postcommit_sequences.rs  production_identity_properties.rs  production_identity_sequences.rs  properties.rs  race_sequences.rs  runtime_fs_loom.rs  runtime_fs_properties.rs  runtime_fs_sequences.rs  runtime_net_loom.rs  runtime_net_properties.rs  runtime_net_sequences.rs
crates/libzircon/: Cargo.toml
crates/libzircon/src/: lib.rs
crates/nexus-effect-peer/: Cargo.toml  README.md
crates/nexus-effect-peer-wire/: Cargo.toml  PROVENANCE.md  README.md
crates/nexus-effect-peer-wire/contract/: effect-peer-native-v1.json
crates/nexus-effect-peer-wire/src/: frozen_v1.rs  lib.rs
crates/nexus-effect-peer-wire/tests/: frozen_v1.rs
crates/nexus-effect-peer/src/: lib.rs  main.rs  peer.rs  peer_tests.rs  wire.rs
crates/nexus-effect-peer/tests/: stdio.rs  wire_v1_freeze.rs
crates/nexus-io/: Cargo.toml
crates/nexus-io/src/: fd.rs  lib.rs  namespace.rs
crates/nexus-ostd-virtio/: Cargo.toml  README.md
crates/nexus-ostd-virtio/src/: dma.rs  lib.rs  pci.rs  portal.rs  production.rs
crates/nexus-portal-abi/: Cargo.toml  README.md
crates/nexus-portal-abi/src/: capability.rs  digest.rs  dispatcher.rs  error.rs  handle.rs  lib.rs  lifecycle.rs  message.rs  request.rs  response.rs
crates/nexus-portal-abi/tests/: capability_contract.rs  dispatcher_contract.rs  lifecycle_contract.rs  request_contract.rs  response_contract.rs  wire_contract.rs
experiments/ostd-cser-spike/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  OSDK.toml  README.md  rust-toolchain.toml  x
experiments/ostd-cser-spike/guest/: linux-code-pager-v1.S  linux-code-pager-v2.S  linux-dynamic-personality-v2.S  linux-futex-personality-v2.S  linux-scheduler-policy.S  pager-v1.S  pager-v2.S  probe.S
experiments/ostd-cser-spike/osdk-runner-base/: Cargo.toml
experiments/ostd-cser-spike/scripts/: assert-dynamic-pie-artifacts.sh  assert-linux-dynamic.awk  assert-linux-epoll.awk  assert-linux-futex.awk  assert-linux-projections.awk  assert-serial.sh  build-guest.sh  build-round4.sh  check-iotlb-gap.sh
experiments/ostd-cser-spike/src/: composition.rs  effect.rs  effect_registry.rs  iommu_probe.rs  lib.rs  linux.rs  linux_dynamic.rs  linux_epoll.rs  linux_futex.rs  linux_futex_core.rs  linux_pager.rs  linux_runtime.rs  pager.rs  readiness.rs  scheduler.rs
experiments/ostd-virtio-cser-spike/: .dockerignore  Cargo.toml  Dockerfile  OSDK.toml  README.md  rust-toolchain.toml  x
experiments/ostd-virtio-cser-spike/assets/: sector0.txt
experiments/ostd-virtio-cser-spike/osdk-runner-base/: Cargo.toml
experiments/ostd-virtio-cser-spike/patches/: ostd-0.18.0-dma-closure.patch
experiments/ostd-virtio-cser-spike/scripts/: assert-debug-trace.awk  assert-patch.sh  assert-serial.sh  assert-stream-capture.sh  check-facade-boundary.sh  check-io-gate.sh  qemu-stream-capture.sh
experiments/ostd-virtio-cser-spike/src/: dma.rs  lib.rs  pci.rs  portal.rs
kernel/axle-kernel/: Cargo.toml
kernel/axle-kernel/src/: copy.rs  fault.rs  futex.rs  irq.rs  kalloc.rs  main.rs  object.rs  page_table.rs  pmm.rs  port_queue.rs  scatter.rs  smp.rs  task.rs  time.rs  trace.rs  trap.rs  userspace.rs  wait.rs
kernel/nexus-ostd/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  OSDK.toml  README.md  cser-production-sources.txt  rust-toolchain.toml  x
kernel/nexus-ostd/guest/: linux-dynamic-personality-v1.S  linux-fsd-v1.S  linux-fsd-v2-postcommit.S  linux-fsd-v2.S  linux-fsd-v3.S  linux-futex-core-personality-v1.S  linux-futex-core-personality-v2.S  linux-futex-personality-v1.S  linux-futex-shared.S  linux-netd-v1.S  linux-netd-v2.S  pager-client.S
kernel/nexus-ostd/osdk-runner-base/: Cargo.toml
kernel/nexus-ostd/scripts/: assert-causal-task-facade-source.sh  assert-composition.awk  assert-composition.sh  assert-linux-dynamic.awk  assert-linux-elf.sh  assert-linux-fs-production-source.sh  assert-linux-fs.awk  assert-linux-futex-core.awk  assert-linux-futex-entry-debugcon.sh  assert-linux-futex-startup-source.sh  (+31 more)
tools/axle-concurrency/: Cargo.toml
tools/axle-conformance/: Cargo.toml
tools/nexus-manifestc/: Cargo.toml
tools/syscalls-gen/: Cargo.toml
tools/xtask/: Cargo.toml
user/nexus-init/: Cargo.toml  build.rs  linker.ld
user/test-runner/: Cargo.toml  build.rs  linker.ld
(+703 files in other folders)
