[workspace]
resolver = "2"
members = [
  "crates/axle-arch-x86_64",
  "crates/axle-core",
  "crates/axle-mm",
  "crates/axle-page-table",
  "crates/axle-sync",
  "crates/axle-virtio-transport",
  "crates/nexus-fs-proto",
  "crates/nexus-fs-model",
  "crates/axle-types",
  "crates/libax",
  "crates/libzircon",
  "crates/nexus-component",
  "crates/nexus-io",
  "crates/nexus-rt",

  # Tools (host binaries)
  "tools/syscalls-gen",
  "tools/axle-conformance",
  "tools/axle-concurrency",
  "tools/nexus-manifestc",
  "tools/datafs-check",

  # These crates are `no_std` and not built by the default host-only CI gates yet,
  # but we keep them in the workspace so formatting and metadata stay coherent.
  "kernel/axle-kernel",
  "user/controller-worker",
  "user/echo-client",
  "user/echo-provider",
  "user/nexus-init",
  "user/test-runner",
]

# CI runs `just test-all`; the narrower host-only gates remain useful during
# inner-loop development.
# See `just xlint` and `just xtest`.
