[package]
name = "axle-mm"
version = "0.1.0"
edition = "2024"
license = "Unlicense"

[features]
default = ["std"]
std = []
loom = ["std", "dep:loom"]

[dependencies]
bitflags = { version = "2.6", default-features = false }

[dependencies.loom]
version = "0.7"
optional = true

[dev-dependencies]
proptest = "1.4"
