[package]
name = "nexus-effect-peer"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
publish = false

[dependencies]
cser-transition-gates = { path = "../cser-transition-gates" }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.150"
sha2 = "=0.10.9"

[[bin]]
name = "nexus-effect-peer"
path = "src/main.rs"
