[package]
name = "nexus-effect-peer"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
publish = false

[dependencies]
cser-transition-gates = { path = "../cser-transition-gates" }
nexus-effect-peer-wire = { path = "../nexus-effect-peer-wire" }
serde_json = "=1.0.150"

[[bin]]
name = "nexus-effect-peer"
path = "src/main.rs"
