[package]
name = "nexus-effect-peer"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
publish = false

[dependencies]
cser-transition-gates = { path = "../cser-transition-gates" }
nexus-effect-peer-wire = { path = "../nexus-effect-peer-wire" }
serde_json = "=1.0.150"
sha2 = { version = "=0.10.9", default-features = false, features = ["force-soft"] }

[[bin]]
name = "nexus-effect-peer"
path = "src/main.rs"
