[package]
name = "nexus-io"
version = "0.1.0"
edition = "2024"
license = "Unlicense"
publish = false

[dependencies]
axle-types = { path = "../axle-types", default-features = false }
bitflags = { version = "2.6", default-features = false }
libzircon = { path = "../libzircon", default-features = false }
nexus-fs-proto = { path = "../nexus-fs-proto", default-features = false }

[features]
default = []
