[workspace]

[package]
name = "ostd-cser-spike"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
publish = false

[dependencies]
linux-raw-sys = { version = "=0.12.1", default-features = false, features = ["auxvec", "general", "net", "no_std"] }
object = { version = "=0.39.1", default-features = false, features = ["elf", "read_core"] }
ostd = { version = "=0.18.0" }
