[package]
name = "axle-kernel"
version = "0.1.0"
edition = "2024"
license = "Unlicense"
publish = false

[dependencies]
axle-core = { path = "../../crates/axle-core", default-features = false }
axle-mm = { path = "../../crates/axle-mm", default-features = false }
axle-page-table = { path = "../../crates/axle-page-table", default-features = false }
axle-types = { path = "../../crates/axle-types", default-features = false }

# Minimal logging helpers; can be replaced later with a richer kernel logger.
spin = "0.9"
x86_64 = { version = "0.15", default-features = false, features = ["instructions"] }
raw-cpuid = "11"
uart_16550 = "0.3"
bitflags = "2.6"
heapless = { version = "0.8", default-features = false }
x2apic = { version = "0.5", default-features = false }

[features]
default = []
