[workspace]

[package]
name = "nexus-kernel"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
publish = false

[features]
stage7b-eval = []
virtio-cser-facade = ["dep:nexus-ostd-virtio"]
virtio-cser-precommit-fault = ["virtio-cser-facade"]

[dependencies]
cser-transition-gates = { path = "../../crates/cser-transition-gates" }
linux-raw-sys = { version = "=0.12.1", default-features = false, features = ["auxvec", "general", "net", "no_std"] }
nexus-ostd-virtio = { path = "../../crates/nexus-ostd-virtio", optional = true }
nexus-portal-abi = { path = "../../crates/nexus-portal-abi" }
object = { version = "=0.39.1", default-features = false, features = ["elf", "read_core"] }
ostd = { version = "=0.18.0" }
sha2 = { version = "=0.10.9", default-features = false, features = ["force-soft"] }
spin = "=0.9.8"
x86 = "=0.52.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(ktest)"] }
