[package]
name = "axle-conformance"
version = "0.1.0"
edition = "2024"
license = "Unlicense"
publish = false

[dependencies]
anyhow = "1.0"
bytemuck = { version = "1.20", features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }
goblin = "0.10"
object = "0.37"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"

[dev-dependencies]
tempfile = "3.20"
