[package]
name = "nexus-manifestc"
version = "0.1.0"
edition = "2024"
license = "Unlicense"
publish = false

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
nexus-component = { path = "../../crates/nexus-component" }
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"

[dev-dependencies]
tempfile = "3.20"
