[package]
name = "nexus-xtask"
version = "0.1.0"
edition = "2024"
license = "Unlicense"
publish = false

# Keep the workflow tool independent from the legacy Nexus workspace. This is
# intentional: deleting or reshaping the old workspace must not remove the
# command surface used to verify the new CSER baseline.
[workspace]

[dependencies]
libc = "=0.2.186"
serde = { version = "=1.0.228", features = ["derive"] }
sha2 = "=0.10.9"
toml = "=0.9.12"
