[package]
name = "nexus-xtask"
version = "0.1.0"
edition = "2024"
license = "Unlicense"
publish = false

# Keep the workflow tool independent from both the reference-model workspace
# and the cargo-osdk kernel workspace. Reshaping either implementation must not
# remove the command surface that verifies their evidence boundary.
[workspace]

[dependencies]
libc = "=0.2.186"
proc-macro2 = "=1.0.106"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
serde_yaml = "=0.9.34"
sha2 = "=0.10.9"
syn = { version = "=2.0.118", features = ["full", "visit"] }
toml = "=0.9.12"
