[package]
name = "nexus-init"
version = "0.1.0"
edition = "2024"
license = "Unlicense"
publish = false

[lib]
name = "nexus_init"
path = "src/lib.rs"

[dependencies]
axle-arch-x86_64 = { path = "../../crates/axle-arch-x86_64", default-features = false }
axle-types = { path = "../../crates/axle-types", default-features = false }
libzircon = { path = "../../crates/libzircon", default-features = false }
nexus-component = { path = "../../crates/nexus-component", default-features = false }

[build-dependencies]
nexus-manifestc = { path = "../../tools/nexus-manifestc" }

[features]
default = []
