[package]
name = "nexus-init"
version = "0.1.0"
edition = "2024"
license = "Unlicense"
publish = false

[lib]
name = "nexus_init"
path = "src/lib.rs"

[dependencies]
axle-arch-x86_64 = { path = "../../crates/axle-arch-x86_64", default-features = false }
axle-types = { path = "../../crates/axle-types", default-features = false }
axle-virtio-transport = { path = "../../crates/axle-virtio-transport", default-features = false }
linked_list_allocator = { version = "0.10.5", default-features = false, features = ["use_spin"] }
libax = { path = "../../crates/libax", default-features = false }
libzircon = { path = "../../crates/libzircon", default-features = false }
nexus-component = { path = "../../crates/nexus-component", default-features = false }
nexus-fs-proto = { path = "../../crates/nexus-fs-proto", default-features = false }
nexus-io = { path = "../../crates/nexus-io", default-features = false }
smoltcp = { version = "0.13.0", default-features = false, features = ["alloc", "medium-ethernet", "proto-ipv4", "socket", "socket-tcp"] }
spin = { version = "0.9", default-features = false, features = ["mutex", "spin_mutex"] }

[build-dependencies]
nexus-manifestc = { path = "../../tools/nexus-manifestc" }

[features]
default = []
