[package]
name = "nexus-test-runner"
version = "0.1.0"
edition = "2024"
license = "Unlicense"
publish = false

[dependencies]
axle-arch-x86_64 = { path = "../../crates/axle-arch-x86_64", default-features = false }
axle-types = { path = "../../crates/axle-types", default-features = false }

[build-dependencies]
cc = "1"

[features]
default = []
