[package]
name = "axle-mm-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.axle-mm]
path = ".."

[workspace]
members = ["."]

[[bin]]
name = "addr_space_ops"
path = "fuzz_targets/addr_space_ops.rs"
test = false
doc = false
bench = false

[[bin]]
name = "frame_table_ops"
path = "fuzz_targets/frame_table_ops.rs"
test = false
doc = false
bench = false
