[workspace]

[package]
name = "ostd-virtio-cser-spike-osdk-bin"
version = "0.1.0"
edition = "2024"

[dependencies.ostd-virtio-cser-spike]
path = "/work"
default-features = false

[dependencies.osdk-frame-allocator]
version = "0.18.0"

[dependencies.osdk-heap-allocator]
version = "0.18.0"

[dependencies.ostd]
version = "0.18.0"

[features]
